selfhost/test/typechecker/return_error_unreachable_stmt_for_inside.2.out
Error at %FILE_NAME%:4:5
Unreachable code
  |      val y = "abcd"
         ^
Control flow exits before this code is reached
